# etch_a_sketch

./: CMakeLists.txt
include/: elements.hpp  globals.hpp  input.hpp  window.hpp
src/: elements.cpp  input.cpp  main.cpp  window.cpp
